change from display to visibility to prevent content pushed and fixed bug of showing answer for a second before hidden

--- a/src/components/infraWebAppZnkExercise/directives/answerExplanation/_answer-explanation-directive.scss
+++ b/src/components/infraWebAppZnkExercise/directives/answerExplanation/_answer-explanation-directive.scss
@@ -1,5 +1,12 @@
 answer-explanation{
-    display: block;
+    visibility: hidden;
+    will-change: visibility;
+    transition: 0.2s;
+    opacity: 0;
+    &.answer-explanation-visible {
+        visibility: visible;
+        opacity: 1;
+    }
 
     .answer-explanation-wrapper {
         background: $bgColor40;
